-vaadinden dolayı java 11 ve spring boot 2.7.8 kullanmak zorunda kalmıştık.vaadin kaldırınca java 17 ve spring boot 3.0.8 sürümüne yüksektildi.
-bu yükseltmelerden kaynaklanan javax.persistence importu yerine jakarta.persistence importu kullanıldı.

-dtolar ;builder design pattern'ını uygulayabilmek içib lombok ile oluşturuldu

-vaadin yerine openUI kullanarak swagger ile UI kısmı halloldu.

-application properties ile projeye sürüm ve açıklama kısmı eklendi.

-projedeki sabitler Constanst class'ı ile kullanıldı.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.username=root
 spring.datasource.password=Meliksahse28
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+application-description=Veriphone API
+application-version=1.0
+springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.org.springframework.web=DEBUG
+logging.level.io.springfox=DEBUG
