-ufak düzenlemeler yapıldı.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,10 @@ spring.datasource.password=Meliksahse28
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-application-description=Veriphone API
+application-title=Veriphone API
+application-description=Veriphone API implementation
 application-version=1.0
+application-license=Veriphone API License
 springdoc.swagger-ui.path=/swagger-ui.html
 
 logging.level.org.springframework.web=DEBUG
